--- a/css/style.css
+++ b/css/style.css
@@ -679,6 +679,15 @@ body {
     .mentors__items {
         flex-wrap: wrap;
     }
+    .wood-left__item1::before,
+    .wood-left__item2::before,
+    .wood-left__item3::before, 
+    .wood-left__item1::before,
+    .wood-left__item2::before
+    .wood-left__item3::before
+    .wood-left__item4::before{
+        display: none;
+    }
 }
 @media (max-width: 1270px) {
     .progress-bar__inner {
@@ -731,7 +740,7 @@ body {
     .graph__inner {
         margin-bottom: 1240px;
 
-    }
+    }    
 }
 @media (max-width: 1060px) {
     .skills__items {
